christmas is over

--- a/src/main/resources/templates/executives.html
+++ b/src/main/resources/templates/executives.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <!--Christmas update:-->
-<canvas id="snowCanvas"></canvas>
+<!--<canvas id="snowCanvas"></canvas>-->
 
 <!-- HEADER FRAGMENT -->
 <div th:replace="fragments/header :: header"></div>
